# expense-tracker-ai

./: package-lock.json
edge-pipeline-service/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
edge-pipeline-service/alembic/: env.py
edge-pipeline-service/alembic/versions/: 20240201_000000_001_initial_schema.py
edge-pipeline-service/src/: config.py  database.py  main.py
edge-pipeline-service/src/core/: base_models.py  dependencies.py  exceptions.py
edge-pipeline-service/src/pipeline/: models.py  repository.py  router.py  schemas.py  service.py
edge-pipeline-service/src/schema/: models.py  repository.py  router.py  schemas.py  service.py
edge-pipeline-service/src/subscription/: models.py  repository.py  router.py  schemas.py  service.py
edge-pipeline-service/src/subscription_filter/: models.py  repository.py  router.py  schemas.py  service.py
edge-pipeline-service/tests/: conftest.py  test_pipeline.py  test_schema.py  test_subscription.py  test_subscription_filter.py
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
src/app/add/: page.tsx
src/app/admin/: page.tsx
src/app/edit/[id]/: page.tsx
src/app/expenses/: page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/: AdminExpenseList.tsx  Charts.tsx  DashboardCards.tsx  ExpenseForm.tsx  ExpenseList.tsx  Header.tsx  QuickAddButton.tsx  RecentExpenses.tsx
src/context/: AuthContext.tsx  ExpenseContext.tsx
src/types/: auth.ts  index.ts
src/utils/: auth.ts  export.ts  format.ts  storage.ts
